# random

./: .travis.yml  CHANGELOG.md  COMMIT.txt  README.md  RELEASE-NOTES-v1.2.md  make-hugs  random.cabal  shell.nix  stack-coveralls.yaml  stack-old.yaml  stack-really-old.yaml  stack.yaml
.github/workflows/: stack.yaml
System/: Random.hs
System/Random/: Internal.hs  Monad.hs  Reader.hs  SplitMix.hs
bench/: Main.hs
bench-legacy/: SimpleRNGBench.hs
doc/: System-Random-Monad.html  System-Random.html  doc-index.html  doc-index.json  index.html  random.haddock  random.txt
doc/src/: System.Random.Internal.html  System.Random.Monad.html  System.Random.html
docs/: System-Random.html  doc-index.html  index.html  random.haddock
scripts/: bench.sh  compare.py
src/System/: Random.hs
src/System/Random/: Internal.hs  Monad.hs  Stateful.hs
test/: Spec.hs  doctests.hs
test/Spec/: Range.hs  Run.hs
tests/: Spec.hs  rangeTest.hs
tests/Spec/: Range.hs
