cabal-version:      >=1.8
name:               random
version:            1.2
license:            BSD3
license-file:       LICENSE
maintainer:         core-libraries-committee@haskell.org
bug-reports:        https://github.com/haskell/random/issues
synopsis:           random number library
description:
    This package provides a basic random number generation library, including
    the ability to split random number generators.

category:           System
build-type:         Simple
extra-source-files:
    README.md
    CHANGELOG.md

source-repository head
    type:     git
    location: http://git.haskell.org/packages/random.git

flag uniform_range_integer
    description: Remove once 'instance UniformRange Integer' is defined
    default:     False

library
    exposed-modules: System.Random
    ghc-options:     -Wall
    build-depends:
        base >=3 && <5,
        bytestring -any,
        primitive -any,
        mtl -any,
        splitmix -any

test-suite T7936
    type:           exitcode-stdio-1.0
    main-is:        T7936.hs
    hs-source-dirs: tests
    ghc-options:    -rtsopts -O2
    build-depends:
        base -any,
        random -any

test-suite TestRandomRs
    type:           exitcode-stdio-1.0
    main-is:        TestRandomRs.hs
    hs-source-dirs: tests
    ghc-options:    -rtsopts -O2 -with-rtsopts=-M10M
    build-depends:
        base -any,
        random -any

    if !flag(uniform_range_integer)
        buildable: False

test-suite TestRandomIOs
    type:           exitcode-stdio-1.0
    main-is:        TestRandomIOs.hs
    hs-source-dirs: tests
    ghc-options:    -rtsopts -O2 -with-rtsopts=-M1M
    build-depends:
        base -any,
        random -any

test-suite rangeTest
    type:           exitcode-stdio-1.0
    main-is:        rangeTest.hs
    hs-source-dirs: tests
    ghc-options:    -rtsopts -O2 -with-rtsopts=-M10M
    build-depends:
        base -any,
        random -any

test-suite random1283
    type:           exitcode-stdio-1.0
    main-is:        random1283.hs
    hs-source-dirs: tests
    ghc-options:    -rtsopts -O2 -with-rtsopts=-M10M
    build-depends:
        base -any,
        containers -any,
        random -any
