cabal-version:      >=1.8
name:               random
version:            1.2
license:            BSD3
license-file:       LICENSE
maintainer:         core-libraries-committee@haskell.org
bug-reports:        https://github.com/haskell/random/issues
synopsis:           random number library
description:
    This package provides a basic random number generation library, including
    the ability to split random number generators.

category:           System
build-type:         Simple
extra-source-files:
    README.md
    CHANGELOG.md

source-repository head
    type:     git
    location: http://git.haskell.org/packages/random.git

library
    exposed-modules: System.Random
    ghc-options:     -Wall
    build-depends:
        base >=3 && <5,
        bytestring -any,
        primitive -any,
        mtl -any,
        splitmix -any

test-suite legacy
    type:           exitcode-stdio-1.0
    main-is:        Legacy.hs
    hs-source-dirs: tests
    other-modules:
        Legacy.T7936
        Legacy.TestRandomIOs
        Legacy.TestRandomRs
        Legacy.Random1283
        Legacy.RangeTest

    ghc-options:    -with-rtsopts=-M4M
    build-depends:
        base -any,
        random -any,
        containers -any
